--- a/8.Tic-Tac-Toe Game/styles.css
+++ b/8.Tic-Tac-Toe Game/styles.css
@@ -1,5 +1,5 @@
 body {
-    font-family: 'Segoe UI', sans-serif;
+    font-family: "Segoe UI", sans-serif;
     background: linear-gradient(to right, #5f87d3, #1d4781);
     padding: 30px;
     text-align: center;
