--- a/4.Personal Portfolio/styles.css
+++ b/4.Personal Portfolio/styles.css
@@ -33,6 +33,8 @@ body {
 }
 
 #navbar a {
+    font-size: 1.1rem;
+    font-weight: bold;
     text-decoration: none;
     color: #f0f0f0;
     transition: color 0.3s;
@@ -40,6 +42,14 @@ body {
 
 #navbar a:hover {
     color: #00bcd4;
+}
+
+#navbar .logo {
+    font-style: italic;
+    width: 100%;
+    font-weight: bold;
+    font-size: 1.3rem;
+    color: #ff9800;
 }
 
 #welcome-section {
